--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.3.16",
-        "updated": "2025-11-21 23:17:50"
+        "version": "1.4.1",
+        "updated": "2025-11-23 11:05:11"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -26,7 +26,7 @@
         "1": "% Tag",
         "*": "% Tage"
     },
-    "aufzaehl": [
+    "ordinalsh": [
         "0.",
         "1.",
         "2.",
