--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.3.16",
-        "updated": "2025-11-21 23:17:50"
+        "version": "1.4.1",
+        "updated": "2025-11-23 11:05:11"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -26,7 +26,7 @@
         "1": "% día",
         "*": "% días"
     },
-    "aufzaehl": [
+    "ordinalsh": [
         "0.º",
         "1.º",
         "2.º",
