--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.3.16",
-        "updated": "2025-11-21 23:17:50"
+        "version": "1.4.1",
+        "updated": "2025-11-23 11:05:11"
     },
     "txwelcome": "Bienvenue",
     "quotes": [
@@ -26,7 +26,7 @@
         "1": "% jour",
         "*": "% jours"
     },
-    "aufzaehl": [
+    "ordinalsh": [
         "0e",
         "1er",
         "2e",
