--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.3.16",
-        "updated": "2025-11-21 23:17:50"
+        "version": "1.4.1",
+        "updated": "2025-11-23 11:05:11"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -28,7 +28,7 @@
         ".": "% дня",
         "*": "% дней"
     },
-    "aufzaehl": [
+    "ordinalsh": [
         "0.",
         "1.",
         "2.",
