--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.4.1",
-        "updated": "2025-11-23 11:05:11"
+        "version": "1.5.1",
+        "updated": "2025-11-23 12:12:42"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -26,22 +26,9 @@
         "1": "% día",
         "*": "% días"
     },
-    "ordinalsh": [
-        "0.º",
-        "1.º",
-        "2.º",
-        "3.º",
-        "4.º",
-        "5.º",
-        "6.º",
-        "7.º",
-        "8.º",
-        "9.º",
-        "10.º",
-        "11.º",
-        "12.º",
-        "13.º"
-    ],
+    "ordinalsh": {
+        "*": "%.º"
+    },
     "himmelsr": [
         "E",
         "S",
