--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.4.1",
-        "updated": "2025-11-23 11:05:11"
+        "version": "1.5.1",
+        "updated": "2025-11-23 12:12:42"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -23,24 +23,11 @@
         "周日"
     ],
     "xxdays": {
-        "*": "% 天"
+        "*": "%天"
     },
-    "ordinalsh": [
-        "0.",
-        "1.",
-        "2.",
-        "3.",
-        "4.",
-        "5.",
-        "6.",
-        "7.",
-        "8.",
-        "9.",
-        "10.",
-        "11.",
-        "12.",
-        "13."
-    ],
+    "ordinalsh": {
+        "*": "第%"
+    },
     "himmelsr": [
         "东",
         "南",
