--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.4.1",
-        "updated": "2025-11-23 11:05:11"
+        "version": "1.5.1",
+        "updated": "2025-11-23 12:12:42"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -26,22 +26,9 @@
         "1": "% Tag",
         "*": "% Tage"
     },
-    "ordinalsh": [
-        "0.",
-        "1.",
-        "2.",
-        "3.",
-        "4.",
-        "5.",
-        "6.",
-        "7.",
-        "8.",
-        "9.",
-        "10.",
-        "11.",
-        "12.",
-        "13."
-    ],
+    "ordinalsh": {
+        "*": "%."
+    },
     "himmelsr": [
         "O",
         "S",
