Änderungen von Rechner 1 (V2)

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -26,7 +26,21 @@
         "*": "%天"
     },
     "ordinalsh": {
-        "*": "第%"
+        "0": "第零",
+        "1": "第一",
+        "2": "第二",
+        "3": "第三",
+        "4": "第四",
+        "5": "第五",
+        "6": "第六",
+        "7": "第七",
+        "8": "第八",
+        "9": "第九",
+        "10": "第十",
+        "11": "第十一",
+        "12": "第十二",
+        "13": "第十三",
+        "*": "第%" 
     },
     "himmelsr": [
         "东",
