--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.1",
-        "updated": "2025-11-23 12:12:42"
+        "version": "1.5.3",
+        "updated": "2025-12-06 22:26:42"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -22,6 +22,21 @@
         "Сб",
         "Вс"
     ],
+    "solcalmonthsxx": [
+        "% Новофев",
+        "% Новомар",
+        "% Новоапр",
+        "% Новомай",
+        "% Новоиюн",
+        "% Новойюл",
+        "% Новоавг",
+        "% Новосен",
+        "% Новоокт",
+        "% Новоноя",
+        "% Новодек",
+        "% Новоян"
+    ],
+    "moon": "Луна",
     "xxdays": {
         "1": "% день",
         "2-4": "% дня",
@@ -105,7 +120,9 @@
     "txmore": "[DF]{txfullscr} предотвращает выключение экрана: например, я повесил старый [i]планшет[/i] с «Солнечными часами» на стену для племянницы. С помощью {txuhrsinn} вы задаёте, движется ли стрелка по часовой (юг) или против. При смене направления часть солнечного круга под горизонтом оказывается перед вами (подробности на следующей странице).[~LF][~LF]{txfarben} выбирает разные циферблаты. {txnachtmodus} {auto} переключается на закате, -6° — к концу сумерек, +6° — до них. — Если настройки не применяются, нажмите кнопку обновления в правом нижнем углу циферблата.[~LF][~LF]В циферблат можно зумить двумя пальцами (или тройным тапом). Чтобы сдвинуть увеличенное изображение, делайте это медленно. Быстрые движения перелистывают страницу. — На следующей странице объяснение циферблата.[DF][DF][DF]",
     "txdata": "[DF]Данные",
     "txlocdata": "[DF]Расчёты «Солнечных часов Гордона» для вашего местоположения должны совпадать с астрономическим альманахом с точностью до 0,0005 угловых секунд³:[DF]",
-    "txobjdata": "– Солнце¹ –[~LF]Время: {clocktm}[~LF]Временная час: {temptm}[~LF]Светлый день: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– Луна² –[~LF]Освещение: {moon_illum}[~LF]Полнолуние: {moon_full}[~LF]Новолуние: {moon_new}[~LF]Размер: {moon_sizep} (85-100)[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]Объяснение: ¹ Время: GPS = синхронизировано | Временной час: «ἡ» неравный час (0,0[NDASH]11,9) дня или «ν» ночи. Ориентировано на завершение: например, шестой час начинается в 5,1, но был объявлен в 6,0 (= с 6-го часа). «φ» Ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | Светлый день и агнихотра: восход[NDASH]закат сегодня [восход завтра], ⁺ = текущее GPS | ² Полнолуние и новолуние: время (в/до дней) | ³ Луна имеет размер около 2000 угловых секунд[~LF][~LF][~LF][b]–– Легенда:[/b]",
+    "txobjdata": "– Солнце¹ –[~LF]Время: {clocktm}[~LF]Временной час: {temptm}[~LF]Солнечный календарь: {cal_gordon}[~LF]Дневной свет: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– Луна² –[~LF]Полнолуние: {moon_full} [~LF]Новолуние: {moon_new}[~LF]Солнечный календарь: {moon_gordon}[~LF]Освещенность: {moon_illum}[~LF]Размер: {moon_sizep} (85-100)[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]Пояснение: ¹ Время: GPS = синхронизировано | Временной час: «ἡ» неравный час (0,0[NDASH]11,9) дня или «ν» ночи. Ориентировано на завершение: например, шестой час начинается в 5,1, но был объявлен в 6,0 (= с 6-го часа). «φ» Ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | Солнечный календарь: информация см. кнопку внизу | Светлый день и Агнихотра: Восход[NDASH]Закат сегодня [Восход завтра], ⁺ = текущее GPS | ² Полнолуние и новолуние: время (в/до дней) | ³ Луна имеет размер около 2000 угловых секунд[DF][DF]",
+    "buttonsolcal": "Солнечный календарь",
+    "txlegende0": "[b]–– Легенда:[/b]",
     "txlegende": "[DF]☉ Солнце, ● Луна (с фазами)[~LF][~LF]♀ Венера (перламутровая), ♂ Марс (красноватый), ♃ Юпитер (полосатый), ♄ Сатурн (с кольцами), ☿ Меркурий (серый)[~LF][~LF][s] Сириус, [k] Канопус, [f] Альфа Центавра, [a] Арктур, [w] Вега, [c] Капелла, [r] Ригель, [p] Процион, [b] Бетельгейзе, [h] Ахернар[DF][DF][DF][DF]",
     "char_vowels": "аеёиоуыэюяАЕЁИОУЫЭЮЯ",
     "char_consonants": "бвгджзйклмнпрстфхцчшщБВГДЖЗЙКЛМНПРСТФХЦЧШЩ",
