--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.1",
-        "updated": "2025-11-23 12:12:42"
+        "version": "1.5.3",
+        "updated": "2025-12-06 22:26:42"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -22,6 +22,21 @@
         "周六",
         "周日"
     ],
+    "solcalmonthsxx": [
+        "新二月%天",
+        "新三月%天",
+        "新四月%天",
+        "新五月%天",
+        "新六月%天",
+        "新七月%天",
+        "新八月%天",
+        "新九月%天",
+        "新十月%天",
+        "新十一月%天",
+        "新十二月%天",
+        "新一月%天"
+    ],
+    "moon": "月",
     "xxdays": {
         "*": "%天"
     },
@@ -40,7 +55,7 @@
         "11": "第十一",
         "12": "第十二",
         "13": "第十三",
-        "*": "第%" 
+        "*": "第%"
     },
     "himmelsr": [
         "东",
@@ -116,7 +131,9 @@
     "txmore": "[DF]{txfullscr} 可防止屏幕关闭：例如，我给侄女挂了一块旧的 [i]平板电脑[/i]，上面装有“日晷”。使用 {txuhrsinn}，您可以设置时钟是顺时针（南）还是逆时针运行。如果更改旋转方向，太阳圈低于地平线的部分就会出现在您面前（详情见下一页）。[~LF][~LF]{txfarben} 可选择不同的表盘。{txnachtmodus} {auto} 在日落时切换，-6° 为黄昏结束时，+6° 为黄昏开始时。- 如果您的设置未被采用，请点击表盘右下角的更新按钮。[~LF][~LF]您可以使用两根手指（或三连击）放大表盘。如果您想移动放大的图像，请缓慢操作。快速移动会切换到下一页。- 下一页提供了表盘的说明。[DF][DF][DF]",
     "txdata": "[DF]数据",
     "txlocdata": "[DF]根据Gordon-太阳时钟对您所在位置的计算结果应与天文年历上的数据一致，误差不超过 0.0005 角秒³：[DF]",
-    "txobjdata": "– 太阳¹ –[~LF]时间：{clocktm}[~LF]时间小时：{temptm}[~LF]光照日： {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]——月亮²——[~LF]照明：{moon_illum}[~LF]满月：{moon_full}[~LF]新月：{moon_new}[~LF]大小： {moon_sizep} (85-100)[~LF][~LF]– 亮度 –[~LF]金星：{venus_magp} (83-100)[~LF]火星：{mars_magp} (52-100)[~LF]木星： {jupiter_magp} (85-100)[~LF]土星：{saturn_magp} (77-100)[~LF]水星：{merkur_magp} (0-100)[~LF][~LF]说明： ¹ 时间：GPS = 同步 | 时间小时：日间“ἡ”不均等小时（0,0[NDASH]11,9）或夜间“ν”。以完成为基准：例如，第六小时从 5.1 开始，但在 6.0 时宣布（= 从第 6 小时开始）。“φ”夜间守夜，不均匀的“分钟”（0φ00[NDASH]3φ59） | 光明日与阿格尼霍特拉：日出[NDASH]日落今天 [日出明天]， ⁺ = 当前 GPS | ² 满月与新月：时间（以天为单位） | ³ 月球大小约为 2000 角秒[~LF][~LF][~LF][b]–– 图例：[/b]",
+    "txobjdata": "– 太阳¹ –[~LF]时间：{clocktm}[~LF]临时小时：{temptm}[~LF]太阳历： {cal_gordon}[~LF]光明日：{sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– 月亮² –[~LF]满月：{moon_full} [~LF]新月：{moon_new}[~LF]太阳历：{moon_gordon}[~LF]照明：{moon_illum}[~LF]大小：{moon_sizep} (85-100)[~LF][~LF]– 亮度 –[~LF]金星： {venus_magp} (83-100)[~LF]火星：{mars_magp} (52-100)[~LF]木星：{jupiter_magp} (87-100)[~LF]土星：{saturn_magp} (77-100)[~LF]水星：{merkur_magp} (0-100)[~LF][~LF]说明：¹ 时间：GPS = 同步 | 时间小时：“ἡ”为白天或夜间的不等小时（0,0[NDASH]11,9）。以完成为基准：例如，第六小时从 5.1 开始，但在 6.0 时宣布（= 从第 6 小时开始）。“φ”夜间守夜，不均匀的“分钟”（0φ00[NDASH]3φ59）| 阳历：信息参见下方按钮 | 光明日与阿格尼霍特拉： 日出[NDASH]日落今天 [日出明天]， ⁺ = 当前 GPS | ² 满月和新月：时间（以天为单位）| ³ 月球大小约为 2000 角秒[DF][DF]",
+    "buttonsolcal": "太阳历",
+    "txlegende0": "[b]–– 图例：[/b]",
     "txlegende": "[DF]☉ 太阳, ● 月亮（带相位）[~LF][~LF]♀ 金星（珍珠色）, ♂ 火星（红色）, ♃ 木星（条纹）, ♄ 土星（带环）, ☿ 水星（灰色）[~LF][~LF][s] 天狼星, [k] 老人星, [f] 半人马座α, [a] 大角星, [w] 织女星, [c] 五车二, [r] 参宿七, [p] 南河三, [b] 参宿四, [h] 水委一[DF][DF][DF][DF]",
     "char_vowels": "",
     "char_consonants": "",
