--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.1",
-        "updated": "2025-11-23 12:12:42"
+        "version": "1.5.3",
+        "updated": "2025-12-06 22:26:42"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -22,6 +22,21 @@
         "Sáb",
         "Dom"
     ],
+    "solcalmonthsxx": [
+        "% nuevo febr",
+        "% nuevo marzo",
+        "% nuevo abril",
+        "% nuevo mayo",
+        "% nuevo junio",
+        "% nuevo julio",
+        "% nuevo agos",
+        "% nuevo sept",
+        "% nuevo octu",
+        "% nuevo novi",
+        "% nuevo dici",
+        "% nuevo enero"
+    ],
+    "moon": "Luna",
     "xxdays": {
         "1": "% día",
         "*": "% días"
@@ -103,7 +118,9 @@
     "txmore": "[DF]{txfullscr} evita que se apague la pantalla: por ejemplo, le he colgado a mi sobrina una vieja [i]tableta[/i] con «reloj de sol» en la pared. Con {txuhrsinn} se puede determinar si el reloj gira en el sentido de las agujas del reloj (sur) o en sentido contrario. Si cambia el sentido de giro, la parte del círculo solar que se encuentra por debajo del horizonte quedará delante de usted (para más detalles, véase la página siguiente). [~LF][~LF]{txfarben} selecciona diferentes esferas. {txnachtmodus} {auto} cambia al atardecer, -6° al final del crepúsculo, +6° antes. - Si sus ajustes no se aplican, pulse el botón de actualización en la parte inferior derecha de la esfera. [~LF][~LF]Puede ampliar la esfera con dos dedos (o con un triple toque). Si desea mover la imagen ampliada, hágalo lentamente. Los movimientos rápidos le llevarán a la página siguiente. - En la página siguiente encontrará una explicación de la esfera.[DF][DF][DF]",
     "txdata": "[DF]Datos",
     "txlocdata": "[DF]Los cálculos del Reloj de sol de Gordon para su ubicación específica deben coincidir con el almanaque astronómico con una precisión de 0,0005 segundos de arco³:[DF]",
-    "txobjdata": "– Sol¹ –[~LF]Hora: {clocktm}[~LF]Hora temporal: {temptm}[~LF]Día luminoso: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– Luna² –[~LF]Iluminada: {moon_illum}[~LF]Luna llena: {moon_full}[~LF]Luna nueva: {moon_new}[~LF]Tamaño: {moon_sizep} (85-100)[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]Explicación: ¹ Hora: GPS = sincronizada | Hora temporal: «ἡ» hora desigual (0,0[NDASH]11,9) del día o «ν» de la noche. Orientado a la finalización: por ejemplo, la sexta hora comienza a las 5,1, pero se proclama a las 6,0 (= a partir de la sexta hora). «φ» Vigilia nocturna con «minutos» desiguales (0φ00[NDASH]3φ59) | Día luminoso y Agnihotra: salida[NDASH]puesta hoy [salida mañana], ⁺ = GPS actual | ² Luna llena y luna nueva: momento (en/antes de días) | ³ La luna tiene un tamaño aproximado de 2000 segundos de arco[~LF][~LF][~LF][b]–– Leyenda:[/b]",
+    "txobjdata": "– Sol¹ –[~LF]Hora: {clocktm}[~LF]Hora temporal: {temptm}[~LF]Calendario solar: {cal_gordon}[~LF]Día de luz: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– Luna² –[~LF]Luna llena: {moon_full} [~LF]Luna nueva: {moon_new}[~LF]Calendario solar: {moon_gordon}[~LF]Iluminada: {moon_illum}[~LF]Tamaño: {moon_sizep} (85-100)[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]Explicación: ¹ Hora: GPS = sincronizada | Hora temporal: «ἡ» hora desigual (0,0[NDASH]11,9) del día o «ν» de la noche. Orientado al cumplimiento: p. ej., la sexta hora comienza a las 5,1, pero se proclamó a las 6,0 (= a partir de la sexta hora). «φ» Vigilia nocturna con «minutos» desiguales (0φ00[NDASH]3φ59) | Calendario solar: información en el botón de abajo | Día luminoso y Agnihotra: Salida[NDASH]Puesta hoy [Salida mañana], ⁺ = GPS actual | ² Luna llena y luna nueva: hora (en/antes de días) | ³ La luna tiene un tamaño aproximado de 2000 segundos de arco[DF][DF]",
+    "buttonsolcal": "Calendario solar",
+    "txlegende0": "[b]–– Leyenda:[/b]",
     "txlegende": "[DF]☉ Sol, ● Luna (con fases)[~LF][~LF]♀ Venus (color perla), ♂ Marte (rojizo), ♃ Júpiter (rayado), ♄ Saturno (con anillos), ☿ Mercurio (gris)[~LF][~LF][s] Sirio, [k] Canopus, [f] Alfa Centauri, [a] Arcturus, [w] Vega, [c] Capella, [r] Rigel, [p] Procyon, [b] Betelgeuse, [h] Achernar[DF][DF][DF][DF]",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
     "char_consonants": "bcdfghjklmnpqrstvwxyzñÑ",
