--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.3",
-        "updated": "2025-12-06 22:26:42"
+        "version": "1.5.4",
+        "updated": "2025-12-06 23:17:43"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -35,6 +35,12 @@
         "新十一月%天",
         "新十二月%天",
         "新一月%天"
+    ],
+    "solcalseasons": [
+        "早春期",
+        "初夏",
+        "初秋",
+        "初冬"
     ],
     "moon": "月",
     "xxdays": {
