--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.3",
-        "updated": "2025-12-06 22:26:42"
+        "version": "1.5.4",
+        "updated": "2025-12-06 23:17:43"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -35,6 +35,12 @@
         "% Neunove",
         "% Neudeze",
         "% Neujanu"
+    ],
+    "solcalseasons": [
+        "Vorfrühling",
+        "Frühsommer",
+        "Frühherbst",
+        "Frühwinter"
     ],
     "moon": "Mond",
     "xxdays": {
