--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.3",
-        "updated": "2025-12-06 22:26:42"
+        "version": "1.5.4",
+        "updated": "2025-12-06 23:17:43"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -35,6 +35,12 @@
         "% nuevo novi",
         "% nuevo dici",
         "% nuevo enero"
+    ],
+    "solcalseasons": [
+        "Preprimavera",
+        "Verano temprano",
+        "Otoño temprano",
+        "Invierno temprano"
     ],
     "moon": "Luna",
     "xxdays": {
