--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.3",
-        "updated": "2025-12-06 22:26:42"
+        "version": "1.5.4",
+        "updated": "2025-12-06 23:17:43"
     },
     "txwelcome": "Bienvenue",
     "quotes": [
@@ -35,6 +35,12 @@
         "% Néo-Novem",
         "% Néo-Décem",
         "% Néo-Janus"
+    ],
+    "solcalseasons": [
+        "Avant-printemps",
+        "Début d’été",
+        "Début d’automne",
+        "Début d’hiver"
     ],
     "moon": "lune",
     "xxdays": {
