--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.3",
-        "updated": "2025-12-06 22:26:42"
+        "version": "1.5.4",
+        "updated": "2025-12-06 23:17:43"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -35,6 +35,12 @@
         "% Новоноя",
         "% Новодек",
         "% Новоян"
+    ],
+    "solcalseasons": [
+        "Предвесна",
+        "Раннее лето",
+        "Ранняя осень",
+        "Ранняя зима"
     ],
     "moon": "Луна",
     "xxdays": {
